--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "buzzer.h": "c",
         "usart.h": "c",
-        "system.h": "c"
+        "system.h": "c",
+        "spi.h": "c"
     },
     "C_Cpp.dimInactiveRegions": false
 }
